--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>SmartHotel AI - نظام التسعير الاستراتيجي 2026</title>
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Sans-serif:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
 <style>
@@ -24,7 +24,7 @@
 --text-muted: #6c757d;
 --success: #28a745;
 --danger: #dc3545;
---font-sans: 'Cairo', Arial, sans-serif;
+--font-sans: 'Sans-serif', Arial, sans-serif;
 /* Heatmap Colors */
 --very-high: #e74c3c;
 --high: #f39c12;
