--- a/index.html
+++ b/index.html
@@ -373,7 +373,8 @@ font-weight: 500;
 <div class="container">
 <header>
 <h1>SmartHotel AI</h1>
-<p style="color: var(--gray);">نظام إدارة الإيرادات الذكي</p>
+<p style="color: var(--gray);">نظام إدارة الإيرادات الذكي
+يتم تحديث بيانات الأحداث تلقائيًا حسب المدينة من خلال طبقة تكامل سحابي (Cloud Integration Layer) ترتبط بعدة منصات حكومية، بما يضمن توحيد مصادر البيانات، والتحقق من صحتها، وتوفير معلومات أحداث دقيقة ومحدثة لدعم نماذج التسعير والتحليل المتقدم.</p>
 </header>
 <div class="glass-panel fade-in">
 <h2 style="margin-bottom: 20px; color: var(--dark-blue);">📄 بيانات الفندق الأساسية</h2>
