--- a/Dashboard.html
+++ b/Dashboard.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>SmartHotel AI - نظام التسعير الاستراتيجي 2026</title>
-    <link href="https://fonts.googleapis.com/css2?family=Sans-serif:wght@300;400;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
     <link rel="stylesheet" href="css/dashboard.css">
@@ -63,16 +62,7 @@
         <div id="results-view" class="hidden fade-in">
             <!-- Active Strategies Header -->
             <!-- Active Strategies Header -->
-            <!-- Active Strategies Header (Reset Only) -->
-            <div class="active-strategies-header fade-in"
-                style="justify-content: flex-end; padding: 10px 20px; background: transparent; border: none; box-shadow: none; margin-bottom: 0;">
-                <button onclick="location.reload()" class="btn-reset" title="إعادة تعيين"
-                    style="background: white; border: 1px solid #ddd; box-shadow: 0 2px 5px rgba(0,0,0,0.05); color: var(--dark-blue); font-weight: 600;">
-                    <span class="icon"
-                        style="background: transparent; width: auto; height: auto; font-size: 1.2rem;">↻</span> إعادة
-                    تعيين
-                </button>
-            </div>
+
 
             <!-- Tabs Navigation -->
             <div class="tabs-nav fade-in">
@@ -80,6 +70,12 @@
                     والتقويم</button>
                 <button class="tab-btn" onclick="switchTab('strategies')" id="btn-strategies">📋 الاستراتيجيات
                     المطبقة</button>
+                <button onclick="location.reload()" class="btn-reset" title="إعادة تعيين"
+                    style="background: white; border: 1px solid #ddd; box-shadow: 0 2px 5px rgba(0,0,0,0.05); color: var(--dark-blue); font-weight: 600;">
+                    <span class="icon"
+                        style="background: transparent; width: auto; height: auto; font-size: 1.2rem;">↻</span> إعادة
+                    تعيين
+                </button>
             </div>
 
             <!-- Tab 1: Stats & Calendar -->
